fix(navbar): fixed classes, fixed logo overflowing

--- a/styles/navbar/Logo.module.scss
+++ b/styles/navbar/Logo.module.scss
@@ -3,7 +3,7 @@
 	height: 40px;
 	width: 100px;
 	transition: opacity 0.5s ease;
-	padding: 0 0 5px 0;
+	padding: 0 0 5px;
 
 	@media (max-width: 768px) {
 		width: 54px;
@@ -14,8 +14,9 @@
 .logoContainer {
 	display: flex;
 	align-items: center;
-	justify-content: center;
 	position: relative;
+	margin-right: auto;
+	overflow: hidden;
 }
 
 .logo.hidden {
